2018-08-30  Youenn Fablet  <youenn@apple.com>

        Remove WebRTC legacy API implementation
        https://bugs.webkit.org/show_bug.cgi?id=189040
        <rdar://problem/43861361>

        Unreviewed.

        * platform/ios/TestExpectations: Use default expectations for the folder.
        This allows skipping imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/setRemoteDescription.html

2018-08-30  Brent Fulgham  <bfulgham@apple.com>

        The width of a nullptr TextRun should be zero
        https://bugs.webkit.org/show_bug.cgi?id=189154
        <rdar://problem/43685926>

        Reviewed by Zalan Bujtas.

        * fast/text/null-string-textrun-expected.txt: Added.
        * fast/text/null-string-textrun.html: Added.

2018-08-30  Eric Carlson  <eric.carlson@apple.com>

        Mock video devices should only support discrete sizes
        https://bugs.webkit.org/show_bug.cgi?id=189000
        <rdar://problem/43766551>

        Reviewed by Youenn Fablet.

        Updated tests and results now that we have better support for width and height constraints.

        * fast/mediastream/MediaDevices-getUserMedia.html:
        * fast/mediastream/MediaStreamTrack-getCapabilities-expected.txt:
        * fast/mediastream/apply-constraints-advanced-expected.txt:
        * fast/mediastream/apply-constraints-advanced.html:
        * fast/mediastream/apply-constraints-video-expected.txt:
        * fast/mediastream/apply-constraints-video.html:
        * fast/mediastream/getUserMedia-default-expected.txt:
        * fast/mediastream/getUserMedia-default.html:
        * imported/w3c/web-platform-tests/mediacapture-streams/MediaStreamTrack-getSettings.https-expected.txt:
        * webrtc/video-interruption.html:
        * webrtc/video.html:

2018-08-30  Youenn Fablet  <youenn@apple.com>

        fast/mediastream/RTCPeerConnection-overloaded-operations.html is flaky after r235484
        https://bugs.webkit.org/show_bug.cgi?id=189155

        Reviewed by Eric Carlson.
