@@ -1,6 +1,0 @@
-This test confirms that a null text run doesn't trigger a crash. It passes if it loads without crashing.
-
-        
-        
-    
-
