@@ -1,19 +1,0 @@
-<!doctype html>
-<head>
-<script>
-if (window.testRunner)
-    testRunner.dumpAsText();
-</script>
-<head>
-<body>
-    <p>This test confirms that a null text run doesn't trigger a crash. It passes if it loads without crashing.</p>
-    <pre id="pre_tag" dir="RTL" >
-        <style onload="pre_tag.appendChild(meter_tag)"/></style>
-        <select multiple="multiple">
-            <optgroup/>
-        </select>
-    </pre>
-    <label>
-        <meter id="meter_tag">
-    </label>
-</body>
